Use z-index to smoothly blend the header logo with the contents below. No need for the white background of the table any more; while I'm here, fix some letter case.

--- a/qmrf-war/src/main/webapp/style/ambit.css
+++ b/qmrf-war/src/main/webapp/style/ambit.css
@@ -201,6 +201,7 @@ A:hover {
 	position: absolute;
 	top: -55px;
 	width: 100%;
+	z-index: 1;
 }
 
 .logo_top-right {
@@ -272,12 +273,11 @@ div.protocol label {
 }
 
 table {
-	COLOR: #516373;
-	background-color: white;
-	FONT-SIZE: 10pt;
-	MARGIN-TOP: 5px;
-	MARGIN-LEFT: 0px;
-	MARGIN-RIGHT: 0px;
+	color: #516373;
+	font-size: 10pt;
+	margin-top: 5px;
+	margin-left: 0px;
+	margin-right: 0px;
 	font-family: Frutiger, "Frutiger Linotype", Univers, "Droid Sans", Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
 	text-align: justify;
 }
